Hide body overflow on fixed color stack

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,6 +11,9 @@ body {
     color: $black;
     font-family: $font-body-sans;
     font-size: 1.25rem;
+    &.overflow-hidden {
+        overflow: hidden;
+    }
 }
 .skip-link.screen-reader-text {
     position: absolute;
